<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="landing">Landing</string>
    <string name="lobby">Lobby</string>
    <string name="for_you_lobby">For You</string>
    <string name="featured_program_guide">Featured Program Guide</string>
    <string name="stage">Stage</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="caffeine_links">Caffeine Links</string>
    <string name="send_message">Send Message</string>
    <string name="send_digital_item">Send Digital Item</string>
    <string name="pre_release">PRE-RELEASE</string>
    <string name="landing_signup_prompt">Watch live streams with your friends.</string>
    <string name="continue_with_facebook">continue with facebook</string>
    <string name="continue_with_twitter">continue with twitter</string>
    <string name="sign_up_with_email">sign up with email</string>
    <string name="error_facebook_callback">Error connecting to Facebook</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="twitter_login_failed">Twitter login failed</string>
    <string name="success_disconnecting_social_account">Social account disconnected</string>
    <string name="failure_disconnecting_social_account">Failed to disconnect social account</string>
    <string name="social_account_rate_limit_exceeded">Social account rate limit exceeded</string>
    <string name="sign_up_title">Let\'s get\nstarted</string>
    <string name="sign_up_something_went_wrong_try_email">Something went wrong. Try email?</string>
    <string name="lets_go">let\'s go</string>
    <string name="sign_up_description">Create an account to watch and create live broadcasts on Caffeine.</string>
    <string name="sign_up_failure">A system error occurred, please try again to sign up</string>
    <string name="sign_up_password_hint">Create a Password</string>
    <string name="sign_up_password_length_hint">Passwords need to be at least 7 characters</string>
    <string name="sign_up_username_hint">Create a Username</string>
    <string name="sign_up_birthdate_hint">Birthdate</string>
    <string name="sign_in_with_username">log in</string>
    <string name="sign_in_failure">Could not sign in. Please try again later.</string>
    <string name="sign_in_button">log in</string>
    <string name="unauth_hint_username">Username</string>
    <string name="unauth_hint_email">Email Address</string>
    <string name="unauth_hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_no_worries">Forgot your\npassword?\n\nNo worries.</string>
    <string name="forgot_password_button">reset password</string>
    <string name="help_is_on_the_way">Help is on the way</string>
    <string name="back_to_login_button">back to login</string>
    <string name="check_your_email">Check your email to reset your password</string>
    <string name="sign_up_button">sign up</string>
    <string name="i_agree_to_legal"><![CDATA[By continuing, you agree to Caffeine\'s <a href="https://www.caffeine.tv/tos.html"><b>Terms of Service</b></a>, <a href="https://www.caffeine.tv/privacy.html"><b>Privacy Policy</b></a>, and <a href="https://www.caffeine.tv/rules.html"><b>Community Rules</b></a>.]]></string>
    <string name="must_agree_to_legal"><![CDATA[Caffeine requires your consent to personalize your experience based on your relationships and activities. We have new <a href="https://www.caffeine.tv/tos.html">Terms of Service</a>, <a href="https://www.caffeine.tv/privacy.html">Privacy Policy</a> and <a href="https://www.caffeine.tv/guidelines.html">Community Guidelines</a>. Please read them and agree to them to continue using Caffeine.]]></string>
    <string name="caffeine_logo_content_description">Caffeine logo</string>
    <string name="sign_in_title">Welcome\nback</string>
    <string name="reset_your_password_description">We\'ll send you an email with a link to reset your password.</string>
    <string name="reset_your_password_failure">Could not reset your password. Please try again later.</string>
    <string name="email_sent_message">Email Sent. Please check your inbox.</string>
    <string name="manage_mfa_coming_soon">Please manage two factor authentication on the web</string>
    <string name="sign_out_button_lowercase">sign out</string>
    <string name="sign_out_button">Sign out</string>
    <string name="sign_out_question">Sign out of account?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account_question">Delete Caffeine Account?</string>
    <string name="delete_account_message">This will permanently delete your account and related data. \"<xliff:g example="randomUserName" id="username">%1$s</xliff:g>\" will be unavailable for 30 days afterwards. There is no undo here! Please enter your password to continue.</string>
    <string name="delete_account_empty_password_error">Please enter your password.</string>
    <string name="delete_account_incorrect_password_error">Password is incorrect.</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="get_notified">get notified</string>
    <string name="reset_password_title">Reset\nPassword</string>
    <string name="reset_password_message">Enter a new password for\nyour account</string>
    <string name="reset_password_button">reset password</string>
    <string name="reset_password_new_password_hint">New Password</string>
    <string name="reset_password_confirm_password_hint">Confirm Password</string>
    <string name="reset_password_match_error">The passwords provided do not match. Try again?</string>
    <string name="reset_password_success_title">All good\nto go</string>
    <string name="reset_password_success_message">Your password has been successfully reset</string>
    <string name="reset_password_success_button">log into caffeine</string>
    <string name="reset_password_code_failure">Password reset time expired, please request another link.</string>
    <string name="reset_password_general_failure">Something went wrong, please try again.</string>
    <string name="camera_microphone_permissions_rationale">Camera and microphone permissions are necessary to broadcast from your phone.</string>
    <string name="camera2_api_not_supported">Your device does not support the camera APIs necessary for broadcasting</string>
    <string name="could_not_switch_camera">Could not switch the camera</string>
    <string name="camera_button_content_description">Broadcast</string>
    <string name="search_button_content_description">Search</string>
    <string name="activity_button_content_description">Activity</string>
    <string name="profile_button_content_description">My Profile</string>
    <string name="lobby_page_title_live_now">Live Now</string>
    <string name="lobby_page_title_upcoming">Upcoming</string>
    <string name="hint_current_password">Current Password</string>
    <string name="update_button">Update</string>
    <string name="live_indicator">LIVE</string>
    <string name="live_indicator_lowercase">live</string>
    <string name="follow_button">Follow</string>
    <string name="following_button">Following</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="find_people">Find people</string>
    <string name="activity_title">Activity</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="digital_item">Digital Item</string>
    <string name="digital_items">Digital Items</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_release_hint">Search by username</string>
    <string name="more">more</string>
    <string name="report_user_more_dialog_option"><![CDATA[<font color=\"#FF0000\">Report <xliff:g example="randomUser" id="username">%1$s</xliff:g>]]></string>
    <string name="report_user">Report <xliff:g example="randomUser" id="username">%1$s</xliff:g></string>
    <string name="close">Close</string>
    <string name="reason">Reason</string>
    <string name="report_reason_harassment_trolling">Harassment/trolling</string>
    <string name="report_reason_inappropriate_content">Inappropriate content</string>
    <string name="report_reason_violence_self_harm">Violence/self-harm</string>
    <string name="descript_optional">Description (optional)</string>
    <string name="spam">Spam</string>
    <string name="other">Other</string>
    <string name="report_description">Caffeine will be notified and <xliff:g example="randomUser" id="username">%1$s</xliff:g> will be added to your ignored list.</string>
    <string name="ignore_user_dialog_option"><![CDATA[<font color=\"#FF0000\">Ignore <xliff:g example="randomUser" id="username">%1$s</xliff:g>]]></string>
    <string name="user_ignored">User ignored.</string>
    <string name="failed_to_ignore_the_user">Failed to ignore the user.</string>
    <string name="empty_ignored_users_list">You won\'t see broadcasts or reactions from people you ignore, and no one will see their reactions in your broadcast.</string>
    <string name="user_reported">User reported.</string>
    <string name="failed_to_report_the_user">Failed to report the user.</string>
    <string name="submit">Submit</string>
    <string name="followed_you">followed you</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="unread_notification_badge_content_description">unread notification badge</string>
    <string name="read_notification_badge_content_description">read notification badge</string>
    <string name="user_watching"><![CDATA[<img src=\"%2$s\"> %1$s is watching]]></string>
    <string name="verified_user_watching"><![CDATA[<img src=\"%2$s\"> %1$s <img src=\"verified_white\"/> is watching]]></string>
    <string name="caster_watching"><![CDATA[<img src=\"%2$s\"> %1$s <img src=\"caster\"/> is watching]]></string>
    <plurals name="user_and_friends_watching">
        <item quantity="one"><![CDATA[<img src=\"%2$s\"> %1$s and one other are watching]]></item>
        <item quantity="other"><![CDATA[<img src=\"%2$s\"> %1$s and %3$s others are watching]]></item>
    </plurals>
    <plurals name="verified_user_and_friends_watching">
        <item quantity="one"><![CDATA[<img src=\"%2$s\"> %1$s <img src=\"verified_white\"/> and one other are watching]]></item>
        <item quantity="other"><![CDATA[<img src=\"%2$s\"> %1$s <img src=\"verified_white\"/> and %3$s others are watching]]></item>
    </plurals>
    <plurals name="caster_and_friends_watching">
        <item quantity="one"><![CDATA[<img src=\"%2$s\"> %1$s <img src=\"caster\"/> and one other are watching]]></item>
        <item quantity="other"><![CDATA[<img src=\"%2$s\"> %1$s <img src=\"caster\"/> and %3$s others are watching]]></item>
    </plurals>
    <string name="user_watching_short"><![CDATA[%1$s]]></string>
    <string name="velvet_rope_section1">We\'re at maximum capacity, so come back in a little bit and we\'ll let you in to join the party.</string>
    <string name="velvet_rope_section2">Want to know when we\'re ready for you? Turn on notifications.</string>
    <string name="update_now_button">update now</string>
    <string name="its_time_to_update">It\'s time\nto update</string>
    <string name="new_version_awaits">A better version of Caffeine\nis ready for you.</string>
    <string name="share_button_content_description">Share the broadcast</string>
    <string name="gift_button_content_description">Send a digital item</string>
    <string name="stage_broadcast_about_tab">\u00A0 About \u00A0</string>
    <string name="stage_broadcast_followers_tab">\u00A0 Followers \u00A0</string>
    <string name="stage_broadcast_following_tab">\u00A0 Following \u00A0</string>
    <string name="chat_react_button_content_description">react</string>
</resources>