<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="tv.caffeine.app.login.ResetPasswordViewModel" />
    </data>

    <ScrollView
        style="@style/NoBarScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".login.ResetPasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/sign_in_flow_start_padding"
            android:paddingEnd="@dimen/sign_in_flow_end_padding">

            <TextView
                style="@style/LoginText.Title"
                android:layout_width="@dimen/big_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_title_margin_top"
                android:text="@string/reset_password_title" />

            <TextView
                style="@style/LoginText.SubTitle"
                android:layout_width="@dimen/big_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_subtitle_top_margin"
                android:text="@string/reset_password_message" />

            <tv.caffeine.app.ui.CaffeineEditTextLayout
                android:id="@+id/current_passsword_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_edit_text_one_margin_top"
                android:hint="@string/reset_password_new_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="@integer/max_username_length"
                app:bottomHint="@string/sign_up_password_length_hint"
                app:isDarkMode="true" />

            <tv.caffeine.app.ui.CaffeineEditTextLayout
                android:id="@+id/confirm_password_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_edit_text_secondary_top"
                android:hint="@string/reset_password_confirm_password_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                app:bottomHint="@string/sign_up_password_length_hint"
                app:isDarkMode="true" />

            <TextView
                style="@style/LoginErrorText"
                android:id="@+id/form_error_text_view"
                android:layout_width="@dimen/big_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/reset_password_error_top_margin"
                android:layout_marginBottom="@dimen/sign_in_error_margin_bottom"
                android:text="@string/reset_password_error"
                android:visibility="@{viewModel.errorTextVisibility}"
                tools:text="@string/reset_password_error" />

            <Button
                style="@style/LoginButton"
                android:id="@+id/reset_password_button"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/sign_in_button_margin_bottom"
                android:enabled="@{viewModel.resetPasswordButtonEnabled}"
                android:text="@string/reset_password_button" />

        </LinearLayout>
    </ScrollView>
</layout>
