<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="title"
            type="String"/>
    </data>

    <!--
    The size and padding in this screen are inconsistent with other screens.
    We will revisit the layout later. I did not add these dimensions to dimens.xml on purpose.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:src="@drawable/caffeine_logo_32"
            android:contentDescription="@string/caffeine_logo_content_description"/>

        <TextView
            style="@style/FullscreenModalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            app:htmlText="@{title}"
            tools:text="Welcome Zand!"/>

        <TextView
            style="@style/CaffeineText.Medium"
            android:id="@+id/section1_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:text="@string/velvet_rope_section1"/>

        <TextView
            style="@style/CaffeineText.Medium"
            android:id="@+id/section2_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/velvet_rope_section2"/>

        <Button
            style="@style/Button.Big.ReleaseUI"
            android:id="@+id/get_notified_button"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/get_notified"/>
    </LinearLayout>
</layout>
