<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/play_store_button"
        style="@style/FullScreenErrorButton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="78dp"
        android:text="@string/update_now_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/caffeine_logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:tint="@color/black"
        android:contentDescription="@string/caffeine_logo_content_description"
        app:srcCompat="@drawable/caffeine_wordmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/FullScreenError.Title"
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:drawablePadding="@dimen/verified_icon_padding"
        android:text="@string/its_time_to_update"
        android:textAppearance="@style/ScreenTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caffeine_logo_image_view" />

    <TextView
        style="@style/FullScreenError.SubTitle"
        android:id="@+id/subtitle_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="44dp"
        android:gravity="start"
        android:text="@string/new_version_awaits"
        android:textAppearance="@style/ScreenCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
