<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/stage_broadcast_details_view_pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stage_release_profile_container_height"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@id/bottom_stage_broadcast_details_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.tabs.TabLayout
                style="@style/StageBroadcastTabLayout"
                android:id="@+id/tab_layout"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:tabIndicator="@drawable/tab_indicator"
                app:tabGravity="fill">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stage_broadcast_about_tab"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stage_broadcast_following_tab"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stage_broadcast_followers_tab"/>
            </com.google.android.material.tabs.TabLayout>
        </androidx.viewpager.widget.ViewPager>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_stage_broadcast_details_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                style="@style/StageActionButton"
                android:id="@+id/gift_button"
                android:layout_width="@dimen/stage_bottom_icon"
                android:layout_height="@dimen/stage_bottom_icon"
                android:layout_marginEnd="@dimen/stage_chat_controls_internal_margin"
                android:src="@drawable/ic_give"
                android:contentDescription="@string/gift_button_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/react_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                style="@style/StageActionButton"
                android:id="@+id/react_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_chat_react"
                android:contentDescription="@string/chat_react_button_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/share_button"
                app:layout_constraintStart_toEndOf="@+id/gift_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                style="@style/StageActionButton"
                android:id="@+id/share_button"
                android:layout_width="@dimen/stage_bottom_icon"
                android:layout_height="@dimen/stage_bottom_icon"
                android:layout_marginStart="@dimen/stage_chat_controls_internal_margin"
                android:paddingTop="4dp"
                android:src="@drawable/ic_share"
                android:contentDescription="@string/share_button_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/react_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

